--- a/.env.exmaple
+++ b/.env.exmaple
@@ -1,7 +1,27 @@
-MONGODB_URI=mongodb+srv://username:password@cluster0.kvfeepe.mongodb.net
-ACCESS_TOKEN_SECRET=your_super_secret_access_token_key_here_min_32_chars
-REFRESH_TOKEN_SECRET=your_super_secret_refresh_token_key_here_min_32_chars
-ACCESS_TOKEN_EXPIRY=15m
+MONGODB_URI=
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=2d
 REFRESH_TOKEN_EXPIRY=7d
 NODE_ENV=development
 PORT=9000
+
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM="SOP Genius <sitanagar200@gmail.com>"
+
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+
+
+INNGEST_SIGNING_KEY=local.dev
+INNGEST_SERVER_HOST=http://localhost:8288
+
+
+OPENAI_API_KEY=
